--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -33,6 +33,10 @@
   cursor: pointer;
 }
 
+.btn-link-red {
+  color: #DA3A3A;
+}
+
 .field_with_errors {
   input[type='text'] {
     border-color: #b94a48;
