--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -23,10 +23,14 @@
   position: relative;
   margin-left: 0px !important;
   @media (max-width: 767px) {
-    padding:10px 70px 10px 3px ;
+    padding: 10px 3px;
+    width: 80% !important;
   }
   &.with-sub-title {
     padding-bottom: 15px;
+    @media (max-width: 767px) {
+      margin-bottom: 4px;
+    }
   }
 
   a {
