--- a/app/assets/stylesheets/songs.css.scss
+++ b/app/assets/stylesheets/songs.css.scss
@@ -46,3 +46,17 @@
 .song-list {
   margin-top: 10px;
 }
+
+.add-to-set {
+  display: none;
+  padding: 10px 0;
+  box-shadow: 0px 5px 10px -4px black inset, 0px -4px 10px -4px black inset;
+  margin-top: -2px;
+  background: #f8f8f8;
+
+  form {
+    margin: 0;
+    float: right;
+    margin-right: 3px;
+  }
+}
