--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -10,11 +10,15 @@
   font-style: normal;
 }
 
-body {
+html, body {
   color: #000;
   font-family: 'Open Sans';
   font-size: 13px;
-  padding: 0px !important;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 a {
@@ -68,6 +72,10 @@ a {
 .page-buttons {
   margin-top: 10px;
   padding-top: 5px;
+
+  a {
+    margin-left: 3px;
+  }
 }
 
 .labeled-item {
@@ -97,4 +105,17 @@ a {
 
 .field_with_errors {
   display: inline;
+}
+
+.select2-container {
+  margin-top: 2px;
+
+  .select2-choice {
+    padding-bottom: 2px;
+  }
+}
+
+.alert {
+  margin: 0px;
+  margin-bottom: -5px;
 }
