--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -24,6 +24,7 @@
   margin-left: 0px !important;
   @media (max-width: 767px) {
     padding: 10px 3px;
+    padding-right: 20px;
     width: 80% !important;
   }
   &.with-sub-title {
