--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -41,6 +41,10 @@ html
     $('.menu-icon').on('click', function() {
       $('.menu').toggleClass('open')
     });
+    $('#submit-button').on('click', function() {
+      $(this).closest('form').submit();
+      return false;
+    });
     var a=document.getElementsByTagName("a");
     for(var i=0;i<a.length;i++)
     {
