--- a/app/views/song_sets/new.html.slim
+++ b/app/views/song_sets/new.html.slim
@@ -1,5 +1,4 @@
-h1 New Set
-
-= render 'form'
-
-= link_to 'Back', song_sets_path
+.form-container
+  .row-fluid
+    h3.page-title New Set
+    = render 'form'
