--- a/app/views/songs/_form.html.slim
+++ b/app/views/songs/_form.html.slim
@@ -3,8 +3,10 @@
     ul
       - @song.errors.each do |msg|
         li= msg
-  div.field
-    = f.label :name
-    = f.text_field :name
-  div.actions
-    = f.submit :class => 'btn'
+  = f.text_field :name, placeholder: 'Song Name', class: 'span12'
+  .form-buttons
+    = link_to '#', id:'submit-button', class: 'submit-btn btn green pull-right' do
+      i.icon-save
+      | Save Song
+    = link_to 'Cancel', members_path, class: 'pull-right btn-link btn-link-red'
+    = submit_tag nil, class: 'hidden-submit'
