--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -67,3 +67,13 @@ ul.family-suggestions {
     text-decoration: underline;
   }
 }
+
+.address-suggestions {
+  list-style: none;
+  margin: 0;
+  margin-bottom: 10px;
+
+  a {
+    color: #0088cc;
+  }
+}
