--- a/app/views/members/_contact_details.html.slim
+++ b/app/views/members/_contact_details.html.slim
@@ -3,16 +3,26 @@ h4.form-section-header *{:class => ["#{@color}-secondary"]} Contact Details
   i.icon-envelope
   = f.email_field :email, placeholder: 'Email Address', class: 'span8'
 = f.fields_for :phone_numbers do |builder|
-  h5= builder.object.name
+  .form-subsection-header = builder.object.name
   .telephone-input
     i.icon-phone
     = builder.hidden_field :name
     = builder.text_field :dialing_code, placeholder: 'Code', class: 'dialing-code'
     = builder.text_field :number, placeholder: 'Number', class: 'number'
 = f.fields_for :addresses do |builder|
-  h5= builder.object.name
-  = builder.hidden_field :name
-  = builder.text_field :address1, placeholder: 'Street', class: 'span8'
-  = builder.text_field :address2, placeholder: 'Suburb', class: 'span8'
-  = builder.text_field :city, placeholder: 'City', class: 'span8'
-  = builder.text_field :postal_code, placeholder: 'Postal Code', class: 'span8'
+  .address
+    .form-subsection-header = builder.object.name
+    ul.address-suggestions
+    = builder.hidden_field :name
+    = builder.text_field :address1, placeholder: 'Street', class: 'span8 address1'
+    = builder.text_field :address2, placeholder: 'Suburb', class: 'span8 address2'
+    = builder.text_field :city, placeholder: 'City', class: 'span8 city'
+    = builder.text_field :postal_code, placeholder: 'Postal Code', class: 'span8 postalCode'
+
+script id="address-suggestion-template" type="text/x-handlebars-template"
+  li= link_to '#', class: 'quick-fill-address', data: { address1: '{{address1}}',
+      address2: '{{address2}}',
+      city: '{{city}}',
+      postalCode: '{{postalCode}}' } do
+    i.icon-home
+    | Use {{ fullAddress }}
